* Status-bar icon fix. It is not a setting.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.7-r6